--- a/src/app/examination/submit-code/submit-code.component.html
+++ b/src/app/examination/submit-code/submit-code.component.html
@@ -4,7 +4,7 @@
         <button type="button" class="btn btn-success" (click)="runCode()">Run</button>
       </div>
       <div class="col-8">
-        <button type="button" class="btn btn-primary">Submit Answer</button>
+        <button type="button" class="btn btn-primary" (click)="submitCode()">Submit Answer</button>
       </div>
       <div class="col-2">
         <button type="button" class="btn btn-danger">Submit Exam</button>
