Created Alert Box

--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -30,5 +30,6 @@
           <app-attend-exam></app-attend-exam>
         </div>
       </div>
+      <app-submit-exam></app-submit-exam>
     </div>
   </div>
