Implementation Of Timer

--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -12,6 +12,9 @@
               </li>
             </ng-container>
           </ul>
+            <div class="card border-0 ms-auto me-2" style="background-color: #e27605;font-weight: bold;">
+            <a class="navbar-brand ms-2 " style="color:white">Time {{this.result.Minutes}} : {{this.result.Seconds}}</a>
+          </div>
         </div>
       </nav>
     </div>
