Added Exam Details

--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -17,7 +17,10 @@
                }</li>
             </ng-container>
           </ul>
-            <div class="card border-0 ms-auto me-2" style="background-color: #e27605;font-weight: bold;">
+          <div class="card border-0 ms-auto bg-primary">
+            <a class="navbar-brand ms-2 " style="color:white;cursor: pointer;">View Details</a>
+          </div> 
+          <div class="card border-0 ms-2 me-2" style="background-color: #e27605;font-weight: bold;">
             <a class="navbar-brand ms-2 " style="color:white">Time {{this.result.Minutes}} : {{this.result.Seconds}}</a>
           </div>
         </div>
@@ -52,4 +55,5 @@
         </div>
       </div>
     </div>
+    <app-exam-details></app-exam-details>
   </div>
